# 42Course

./: .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
42/: README.md
42/Piscine Object/: README.md
42/PiscineEmbedded/: README.md
42/Python for Data Science/: README.md
42/abstract_data/: .gitignore  Makefile  README.md  benchmark_results.csv  plot.py  requirements.txt  valgrind-out.txt
42/camagru/: .env.example  Gemfile  Makefile  Rakefile  api_doc.rb  app.rb  config.ru  docker-compose.yml
42/cloud-1/: README.md
42/ft_ls/: Makefile  README.md  analisis.txt  debug_ft_ls  ft_ls  msg_ft_ls  t1.txt  t2.txt  valgrind-out.txt
42/ft_matrix/: Cargo.toml  README.md
42/guimp/: .gitignore  Libft  Makefile  README.md  requirements.txt  valgrind-out.txt
42/inception-of-things/: .gitignore  README.md  requirements.txt
42/libasm/: Makefile  README.md  ft_read.s  ft_strcmp.s  ft_strcpy.s  ft_strdup.s  ft_strlen.s  ft_write.s  libasm.h  strlen.s  test_lib.c  test_lib.cpp
42/libftpp/: Doxyfile  Makefile  README.md  classes.rst  conf.py  index.rst  log.txt  main_test  requirements.txt
42/malloc/: .gitignore  Libft  Makefile  README.md  malloc_log.json  malloc_log_632959_1763664035.json  test_logger  (+1 more)
42Core/: README.md
42Documentation/: README.md
42Documentation/AI/MCP_Architecture/Model/rust-pulga-crud-framework/example-library/: Cargo.toml  README.md
42Documentation/AI/MCP_Architecture/Model/rust-pulga-crud-framework/example-library/src/: book.rs  library.rs  main.rs
42Piscine/: README.md
(+3205 files in other folders)
